--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,12 +13,14 @@ jobs:
     steps:
       # install node and checkout code
       - node/install:
-          node-version: '14.15'         
+          node-version: '14.15' 
+      - aws-cli/setup
+      - eb/setup        
       - checkout
       # Use root level package.json to install dependencies in the frontend app
       - run:
           name: Install Front-End Dependencies
-          command: |
+          command:  npm run frontend:install
             echo "NODE --version" 
             echo $(node --version)
             echo "NPM --version" 
@@ -27,22 +29,22 @@ jobs:
       # TODO: Install dependencies in the the backend API          
       - run:
           name: Install API Dependencies
-          command: |
+          command:  npm run api:install
            echo "TODO: Install dependencies in the the backend API  "
       # TODO: Lint the frontend
       - run:
           name: Front-End Lint
-          command: |
+          command: npm run frontend:lint
             echo "TODO: Lint the frontend"
       # TODO: Build the frontend app
       - run:
           name: Front-End Build
-          command: |
+          command: npm run frontend:build
             echo "TODO: Build the frontend app"
       # TODO: Build the backend API      
       - run:
           name: API Build
-          command: |
+          command: npm run api:build
             echo "TODO: Build the backend API"
   # deploy step will run only after manual approval
   deploy:
@@ -58,7 +60,7 @@ jobs:
       - run:
           name: Deploy App
           # TODO: Install, build, deploy in both apps
-          command: |
+          command: npm run api:deploy && npm run frontend:deploy 
             echo "# TODO: Install, build, deploy in both apps"
             
 workflows:
