--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,16 +20,14 @@ jobs:
       # Use root level package.json to install dependencies in the frontend app
       - run:
           name: Install Front-End Dependencies
-          command:  npm run frontend:install
-            echo "NODE --version" 
-            echo $(node --version)
-            echo "NPM --version" 
-            echo $(npm --version)
+          command: |
             npm run frontend:install
+          
       # TODO: Install dependencies in the the backend API          
       - run:
           name: Install API Dependencies
-          command:  npm run api:install
+          command: |
+            npm run api:install
       # TODO: Lint the frontend
       - run:
           name: Front-End Lint
@@ -37,12 +35,14 @@ jobs:
       # TODO: Build the frontend app
       - run:
           name: Front-End Build
-          command: npm run frontend:build
+          command: |
+           npm run frontend:build
           
       # TODO: Build the backend API      
       - run:
           name: API Build
-          command: npm run api:build
+          command: |
+           npm run api:build
             
   # deploy step will run only after manual approval
   deploy:
