--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,29 +21,29 @@ jobs:
       - run:
           name: Install Front-End Dependencies
           command: |
-            npm run frontend:install
-          
+           npm run frontend:install
+           
       # TODO: Install dependencies in the the backend API          
       - run:
           name: Install API Dependencies
           command: |
-            npm run api:install
+           npm run api:install
+          
       # TODO: Lint the frontend
       - run:
           name: Front-End Lint
-          command: npm run frontend:lint
+          command:  npm run frontend:lint
+           
       # TODO: Build the frontend app
       - run:
           name: Front-End Build
           command: |
            npm run frontend:build
-          
       # TODO: Build the backend API      
       - run:
           name: API Build
           command: |
            npm run api:build
-
   # deploy step will run only after manual approval
   deploy:
     docker:
@@ -58,7 +58,9 @@ jobs:
       - run:
           name: Deploy App
           # TODO: Install, build, deploy in both apps
-          command: npm run api:deploy && npm run frontend:deploy 
+          command: |
+           npm run api:deploy && npm run frontend:deploy 
+           
             
 workflows:
   udagram:
