--- a/udagram/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram/udagram-api/.elasticbeanstalk/config.yml
@@ -3,7 +3,7 @@ branch-defaults:
     environment: Udacity-env
     group_suffix: null
 deploy:
-  artifact: Archive.zip
+  artifact: www/Archive.zip
 global:
   application_name: Udacity
   branch: null
